# deep-learning-from-scratch-4

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
deep_learning_from_scratch4/ch01/: avg.py  bandit.py  bandit_avg.py  non_stationary.py
deep_learning_from_scratch4/ch04/: gridworld_play.py  policy_eval.py  policy_iter.py  value_iter.py
deep_learning_from_scratch4/ch05/: mc_control.py  mc_control_offpolicy.py  mc_eval.py
deep_learning_from_scratch4/ch06/: q_learning.py  q_learning_simple.py  sarsa.py  sarsa_off_policy.py  td_eval.py
deep_learning_from_scratch4/ch07/: q_learning_nn.py
deep_learning_from_scratch4/ch09/: actor_critic.py  reinforce.py  simple_pg.py
deep_learning_from_scratch4/common/: gridworld.py  gridworld_render.py  utils.py
deep_learning_from_scratch4/pytorch/: actor_critic.py  dqn.py
