[tool.poetry]
name = "deep_learning_from_scratch4"
version = "0.1.0"
description = "reinforcement learning"
authors = ["John Doe"]
license = "MIT"
readme = "README.md"
packages = [{ include = "deep_learning_from_scratch4" }]

[tool.poetry.dependencies]
python = ">=3.12,<4"

numpy = ">=2.0"
matplotlib = ">=3.4"
gym = "^0.26.2"
# 筆者koki0702氏謹製のライブラリ。
# ゼロから作るDeep Learning 3 を読んでいないなら、素直にPyTorchで良さそう
dezero = "^0.0.13"

torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.4.0-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cpu/torchvision-0.19.0-cp312-cp312-linux_aarch64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cpu/torchaudio-2.4.0-cp312-cp312-linux_aarch64.whl" }

# $ uname -m
# aarch64
# かつpython3.12 を使っている 安定版のダウンロードなら
# https://pytorch.org/get-started/locally/ より
# pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
# で行けるとのこと。
#
# $ pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
# Looking in indexes: https://download.pytorch.org/whl/cpu
# Collecting torch
#   Downloading https://download.pytorch.org/whl/cpu/torch-2.4.0-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl (89.7 MB)
#      ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 89.7/89.7 MB 25.4 MB/s eta 0:00:00
# Collecting torchvision
#   Downloading https://download.pytorch.org/whl/cpu/torchvision-0.19.0-cp312-cp312-linux_aarch64.whl (14.1 MB)
#      ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 14.1/14.1 MB 30.2 MB/s eta 0:00:00
# Collecting torchaudio
#   Downloading https://download.pytorch.org/whl/cpu/torchaudio-2.4.0-cp312-cp312-linux_aarch64.whl (1.7 MB)
#
# (以下略)
# なので、上記のURLを指定すれば良さそう

[tool.poetry.dev-dependencies]
ruff = ">=0.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# ruff setting document: https://docs.astral.sh/ruff/
line-length = 120
target-version = "py312"

exclude = [
    # default setting: https://docs.astral.sh/ruff/configuration/
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    # add my own setiting
    ".devcontainer",
    "__pycache__",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402", "E501"]


[tool.ruff.format]
quote-style = "double"
